syntax = "proto3";

option go_package = "TicTacGo/pb";

package service;

import "google/protobuf/timestamp.proto";

message Player {
    int64 id = 1;
    string username = 2;
    int32 cnt = 3;
}

message Players {
    repeated Player players = 1;
}

message Game {
    int64 id = 1;
    Player xPlayer = 2;
    Player oPlayer = 3;
    string boardState = 4;
    bool xTurn = 5;
    google.protobuf.Timestamp updatedOn = 6;
    google.protobuf.Timestamp startedOn = 7;
    int32 result = 8;
    repeated Step steps = 9;
}

message Games {
    repeated Game games = 1;
}

message Step {
    int64 gameId = 1;
    int32 ord = 2;
    int32 moveRow = 3;
    int32 moveCol = 4;
    string board = 5;
    bool xTurn = 6;
    int32 result = 7;
}

message GetGamesReq {
    int32 page = 1;
    Player xPlayer = 2;
    Player oPlayer = 3;
    int32 perPage = 4;
}

message GetPlayersReq {
    int32 page = 1;
    int32 perPage = 2;
}

message GetGameReq {
    int64 id = 1;
}

message CreateGameReq {}

message MakeMoveReq {
    int32 row = 1;
    int32 col = 2;
    int64 gameId = 3;
}

message CredentialsReq {
    string username = 1;
    string password = 2;
}

message LoginResp {
    string token = 1;
    Player Player = 2;
}

message WhoAmIReq {}

message ListenStepsReq {
    int64 id = 1;
}

service TicTacGoService {
    rpc Register (CredentialsReq) returns (Player) {}

    rpc Login (CredentialsReq) returns (LoginResp) {}

    rpc GetPlayers (GetPlayersReq) returns (Players) {}

    rpc CreateGame (CreateGameReq) returns (Game) {}

    rpc GetGames (GetGamesReq) returns (Games) {}

    rpc GetGame (GetGameReq) returns (Game) {}

    rpc MakeMove (MakeMoveReq) returns (Game) {}

    rpc ListenSteps (ListenStepsReq) returns (stream Step) {}

    rpc WhoAmI (WhoAmIReq) returns (Player) {}
}